--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 asgiref==3.5.0
+distlib==0.3.4
+dj-database-url==0.5.0
 Django==3.0.1
+filelock==3.5.0
 gunicorn==20.1.0
+platformdirs==2.5.0
+psycopg2==2.9.3
 pytz==2021.3
+six==1.16.0
 sqlparse==0.4.2
+virtualenv==20.13.1
+whitenoise==6.0.0
